# Test

./: .gitignore  shoopingList.txt  token
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
CMakeProject1/CMakeProject1/utility/: CMakeLists.txt  math_.cpp  math_.h
NFC/: logger.cpp  logger.h  main.cpp  nfc.cpp  nfc.h  nfc.pro  nfc.pro.user.22  nfc.pro.user.4.9-pre1  nfc.ui  resource.qrc  ui_nfc.h  utils.cpp  utils.h
NFC/Module/: encrypt.c  encrypt.h  farme.c  farme.h  sim_ringbuf.c  sim_ringbuf.h
NFC/NFC/config/: config.ini
NFC/NFC/data/: bottle_en.txt
test/: inttest.cpp  inttest.h  readme.txt  test.cpp  test.pro  token
